# medical-heuristic-learning

./: .gitignore  README-CN.md  README.md  RUN_GUIDE.md  config.py  example.py  example_continuous_learning.py  example_inference.py  example_training.py  main.py  metrics.py  pyproject.toml  run.py  run_continuous_learning_experiment.py
ablation/: README.md  run_ablation.py  run_ablation_balance.py  run_batches.py
agent/: client.py  prompts.py
continuous_learning/: README.md  run_continuous_learning.py
contrast0/: README.md  run_contrast0.py
contrast1/: README.md  contrast1_36.csv  contrast1_40.csv  contrast1_42.csv  contrast1_balance.csv  run_contrast1.py  run_contrast1_balance.py  run_contrast1_balance_hl.py
contrast2/: README.md  fill_contrast2_hl_confusion.py  run_contrast2.py  run_contrast2_hl.py
data/: YHD_bicarbonate.csv
evolution/: degradation.py  error_analysis.py  rule_utils.py
example_out/: evolution_results.txt  final_comparison.txt  final_heuristic_model.py  heuristic_system.py  iteration_log.json  probe_knowledge.md  probe_univariate_results.csv
hl/: baselines.py  config.py  metrics.py
hl/utils/: io.py  (+1 more)
out2/: final_comparison.txt  final_heuristic_model.py  iteration_log.json  probe_knowledge.md
out3/: evolution_results.txt  final_comparison.txt  final_heuristic_model.py  heuristic_system.py  iteration_log.json  probe_knowledge.md
out_auto_patch/: heuristic_system.py
out_auto_patch2/: evolution_results.txt  final_comparison.txt  final_heuristic_model.py  heuristic_system.py  iteration_log.json
out_auto_tune/: evolution_results.txt
(+117 files in other folders)
